# sdd-tdd-agent

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.agent/: architecture.md  config.yml  conventions.md  project.yml
sdd_tdd_agent/: __init__.py  __main__.py  analyze_command.py  angular_workspace.py  automated_refactor.py  bug_session.py  change_approval.py  chat_adapter.py  chat_session.py  cli.py  cli_help.py  clipboard.py  composer.py  cycle_completion.py  design_adapter.py  design_command.py  design_generation.py  design_review.py  ecosystem_registry.py  execution_config.py  failure_memory.py  feature_session.py  git_integration.py  green_verification.py  implementation_command.py  implementation_review.py  integration_api.py  interactive_shell.py  model_adapter.py  node_project.py  platform_contract.py  production_source_adapter.py  production_source_command.py  production_source_generation.py  production_source_workspace.py  project_detection.py  project_init.py  project_memory.py  project_status.py  provider_registry.py  (+31 more)
tests/: cycle_completion_support.py  green_verification_support.py  implementation_review_support.py  production_source_support.py  refactor_completion_support.py  test_analyze_active_requirement.py  test_analyze_active_requirement_codex.py  test_analyze_cli.py  test_analyze_cli_config_error.py  test_analyze_config.py  test_analyze_config_failures.py  test_analyze_no_active_session.py  test_analyzer_command_null_byte.py  test_analyzer_command_whitespace.py  test_angular_design_generation.py  test_angular_production_source.py  (+128 more)
(+487 files in other folders)
