[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdd-tdd-agent"
version = "0.5.0"
description = "A single-agent SDD and incremental TDD development CLI"
requires-python = ">=3.9"
dependencies = [
    "prompt-toolkit>=3,<4",
]

[project.scripts]
wssagent = "sdd_tdd_agent.cli:cli_entrypoint"

[tool.setuptools.package-data]
sdd_tdd_agent = ["prompts/**/*.md"]

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "--cov=sdd_tdd_agent --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pyright]
include = ["sdd_tdd_agent", "tests"]
pythonVersion = "3.9"
typeCheckingMode = "standard"
